# Tinklepaw-Minecraft

./: .gitignore  Dockerfile  deploy-local.sh  docker-compose.yml  plan.md
hud-mod/: build.gradle.kts  gradle.properties  settings.gradle.kts
hud-mod/src/main/java/dev/nyaru/hud/: HudPayload.java  HudRenderer.java  HudState.java  NyaruHudClient.java
hud-mod/src/main/resources/: fabric.mod.json
launcher/: index.html  package.json
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
plugin/: build.gradle.kts  settings.gradle.kts
plugin/src/main/kotlin/dev/nyaru/minecraft/: NyaruPlugin.kt
plugin/src/main/kotlin/dev/nyaru/minecraft/api/: ApiClient.kt
plugin/src/main/kotlin/dev/nyaru/minecraft/commands/: AdminCommand.kt  BackpackCommand.kt  Commands.kt  HelpCommand.kt  HomeCommand.kt  LogCommand.kt  ProtectCommand.kt  SpawnCommand.kt  SyncCommand.kt  TeamCommand.kt  TitleCommand.kt  TradeCommand.kt
plugin/src/main/kotlin/dev/nyaru/minecraft/data/: DataManager.kt  ShopManager.kt
plugin/src/main/kotlin/dev/nyaru/minecraft/gui/: BackpackGui.kt  EnhanceGui.kt  HelpGui.kt  JobSelectGui.kt  ShopGui.kt  SkillGui.kt  TitleGui.kt  TradeGui.kt
plugin/src/main/kotlin/dev/nyaru/minecraft/listeners/: ActionBarManager.kt  BlockBreakListener.kt  BlockDropListener.kt  BlockLogListener.kt  BlockPlaceListener.kt  ChatTabListener.kt  CombatListener.kt  FishingListener.kt  NecromancerListener.kt  PlayerJoinListener.kt  ProtectionListener.kt  SidebarManager.kt  SmeltListener.kt  (+2 more)
plugin/src/main/resources/: config.yml  plugin.yml
(+11 files in other folders)
