[package]
name = "nyaru-launcher"
version = "0.1.3"
description = "Nyaru Minecraft Launcher"
authors = ["Nyaru"]
edition = "2021"

[lib]
name = "nyaru_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nyaru-launcher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sha1 = { version = "0.10", features = ["oid"] }
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
url = "2"
